Finish basic functionality

--- a/index.html
+++ b/index.html
@@ -6,11 +6,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet" type="text/css">
   <script src="./script.js" defer></script>
-  <title>Document</title>
+  <title>Tic Tac Toe</title>
 </head>
 
 <body>
-
+  <div class="text-wrapper">
+    <header>Tic Tac Toe</header>
+    <div class="player-turn winner">X's turn</div>
+  </div>
+  <div class="game-wrapper">
+    <div class="cell" id="0">
+      <img src="./images/x.svg" alt="" class="x" id="0">
+      <img src="./images/o.svg" alt="" class="o" id="0">
+    </div>
+    <div class="cell" id="1">
+      <img src="./images/x.svg" alt="" class="x" id="1">
+      <img src="./images/o.svg" alt="" class="o" id="1">
+    </div>
+    <div class="cell" id="2">
+      <img src="./images/x.svg" alt="" class="x" id="2">
+      <img src="./images/o.svg" alt="" class="o" id="2">
+    </div>
+    <div class="cell" id="3">
+      <img src="./images/x.svg" alt="" class="x" id="3">
+      <img src="./images/o.svg" alt="" class="o" id="3">
+    </div>
+    <div class="cell" id="4">
+      <img src="./images/x.svg" alt="" class="x" id="4">
+      <img src="./images/o.svg" alt="" class="o" id="4">
+    </div>
+    <div class="cell" id="5">
+      <img src="./images/x.svg" alt="" class="x" id="5">
+      <img src="./images/o.svg" alt="" class="o" id="5">
+    </div>
+    <div class="cell" id="6">
+      <img src="./images/x.svg" alt="" class="x" id="6">
+      <img src="./images/o.svg" alt="" class="o" id="6">
+    </div>
+    <div class="cell" id="7">
+      <img src="./images/x.svg" alt="" class="x" id="7">
+      <img src="./images/o.svg" alt="" class="o" id="7">
+    </div>
+    <div class="cell" id="8">
+      <img src="./images/x.svg" alt="" class="x" id="8">
+      <img src="./images/o.svg" alt="" class="o" id="8">
+    </div>
+  </div>
+  <button class="reset">Reset</button>
 </body>
 
 </html>
